--- a/web-app/.gitignore
+++ b/web-app/.gitignore
@@ -39,3 +39,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/app/generated/prisma
+
+/app/generated/prisma
+
+/app/generated/prisma
+
+/app/generated/prisma
+
+# prisma
+prisma/dev.db
+node_modules/.prisma
+
